# boo

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  README.ru.md  TODO.txt  boo.ipynb  boo.py  changelog.py  columns.py  dataframe.py  dataset.py  example.ipynb  example.py  example_agg.py  example_identities.py  example_make_local_dataset.py  example_use_local_dataset.py  file.py  get_all.py  mypy.ini  paper.md  path.py  pypi.bat  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  transform.py  transform_column.py  transform_row.py  upload.bat  year.py
.github/workflows/: .action.yml
assets/: sample.txt  sample1.txt  to_aws.bat  variables.json
bash/: run.bat
boo/: __init__.py  cli.py  columns.py  curl.py  dataframe.py  download_all.py  downloader.py  errors.py  file.py  get_file.py  helper.py  main.py  messages.py  okved.py  path.py  persist.py  questions.md  reader.py  whatis.py  year.py
boo/dataframe/: __init__.py  canonic.py  filter.py  util.py
boo/okved/: __init__.py  okved.py
boo/test/: conftest.py  raw0.csv  test_columns.py  test_curl.py  test_dataframe.py  test_dir.py  test_main.py  (+7 more)
boo2/: all.py  boo.py  cli.py  downloader.py  get_all.py  reader.py  whatis.py
docs/: columns.html  curl.html  errors.html  file.html  helper.html  index.html  main.html  okved.html  paper.md  path.html  script.md  whatis.html  year.html
examples/: example_use_local_dataset.py
script/: doc.bat  lab.bat  make_table.py  pep8.bat  run.bat  tables.py  upload.bat
tests/: test_columns.py  test_downloader.py  test_pandas.py  test_remote_files.py
(+28 files in other folders)
