[tool.poetry]
name = "boo"
version = "0.1.5"
description = "Russian corporate financial reports 2012-2018."
authors = ["Evgeniy Pogrebnyak <e.pogrebnyak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
tqdm = "^4.59.0"
click = "^7.1.2"
pandas = "1.1.5" # wait until "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


